# dagster-rudderstack

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yaml  test.yml
dagster_rudderstack/: types.py
dagster_rudderstack/ops/: profiles.py  retl.py
dagster_rudderstack/resources/: rudderstack.py
dagster_rudderstack_tests/: test_ops.py  test_resources.py
rudder_dagster/: types.py
rudder_dagster/ops/: retl.py
rudder_dagster/resources/: rudderstack.py
rudder_dagster_tests/: test_ops.py  test_resources.py
