[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster_rudderstack"
version = "1.3.0"
readme = "README.md"
license = {file = "LICENSE"}
description = "A Dagster library for triggering Reverse ETL syncs in RudderStack."
dependencies = [
    "dagster>=1.6.14",
    "pydantic>=2.8.2",
    "pytest>=7.3.1",
    "requests>=2.32.3",
    "responses>=0.25.0",
    "setuptools>=80.0.0",
    "zipp>=3.19.1"
]
requires-python = ">= 3.11"

[tool.setuptools.packages.find]
exclude = ["dagster_rudderstack_tests"]

[tool.dagster]
module_name = "dagster_rudderstack"
